<resources>
    <string name="app_name">Great Garden Map</string>

    <string name="text_gallery">Gallery</string>
    <string name="text_map">Map</string>
    <string name="text_about">About</string>

    <string name="welcome_string">Welcome to \n Great Garden!</string>

    <string name="db_name">garden_db.db</string>
    <string name="db_table_name">info_table</string>

    <string name="db_col_name">name</string>
    <string name="db_col_desc">desc</string>

    <string name="about_title">About the app</string>

    <string name="about_author">
    This app is designed to show a detailed information map of Großer Garten in Dresden,
    which is a group project for the course "Mobile Cartography" at TU Dresden.\n \nAuthors of this Android application: \nChenyu ZUO  \nNevil KODIYAN  \nJunyan LI \n  </string>
    <string name="about_sources">Source:</string>

    <string name="about_sourcetext">
    Icons sources: icons8 \nUrl: https://icons8.com \nLicense: CC BY-ND 3.0 \nInformation sources: Wikipedia \nUrl:https://en.wikipedia.org/wiki\nLicense: CC BY-SA 3.0\n
</string>

    <string name="about_updateversion">
    Last Update: 22-01-2017 \nVersion: 1.0.1
</string>

    <string name="setEnglishLocale">English</string>
    <string name="setGermanLocale">German</string>
    <string name="getGPSPosition">Locate me</string>

</resources>
